--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# .gitignore
 /node_modules
 /vendor
 /storage/*.key
@@ -6,8 +5,8 @@
 .env.*
 storage/dotenv-editor/backups/
 /public/hot
-/public/mix-manifest.json
-/public/css
-/public/js
+# /public/mix-manifest.json
+# /public/css
+# /public/js
 npm-debug.log
 yarn-error.log
